--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: DecheineSite
 subtitle: ''
-description: ''
+description: 'Personal website to showcase academics, personal projects, resume, and possibly other things'
 keywords:
-author: John Doe
+author: Nick Decheine
 language: en
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://decheine.github.io/project
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
