--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: DecheineSite
-subtitle: ''
+title: Nicholas Decheine
+subtitle: 'Welcome to my site'
 description: 'Personal website to showcase academics, personal projects, resume, and possibly other things'
 keywords:
 author: Nick Decheine
