--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Nicholas Decheine
-subtitle: 'Welcome to my site'
+subtitle: 'Welcome to my site.'
 description: 'Personal website to showcase academics, personal projects, resume, and possibly other things'
 keywords:
 author: Nick Decheine
