--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ resume:
       text: your-website.com
       link: https://crispgm.github.io/resume/resume.html
     - icon: fa-github
-      text: @decheine
+      text: \@decheine
       link: https://github.com/decheine
   education:
     - university: Your First University
