--- a/themes/hexo-crisp-minimal-theme/_config.yml
+++ b/themes/hexo-crisp-minimal-theme/_config.yml
@@ -29,7 +29,7 @@ resume:
       items: Consectetur, Adipiscing, Elit
     - title: Skill Group 3
       items: Sed do, Eiusmod, Tempor, Incididunt
-  experience:
+  research:
     - title: Job Title 1
       duration: Apr 2016 - Now
       company: Your 1st, Inc.
